kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    # external-dns.alpha.kubernetes.io/hostname: eksops.site
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "*.eksops.site" 
    secretName: wildcard-tls
  rules:
  - host: test.eksops.site
    http:
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 3000
